Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <h1>Azureodm</h1>
         <p>Mongoengine inspired lightweight ODM for Azure Table Service</p>
 
-        <p class="view"><a href="https://github.com/Feedcry/AzureODM">View the Project on GitHub <small>Feedcry/AzureODM</small></a></p>
+        <p class="view"><a href="https://github.com/Feedcry/AzureODM-py">View the Project on GitHub <small>Feedcry/AzureODM-py</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/Feedcry/AzureODM/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Feedcry/AzureODM/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Feedcry/AzureODM">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/Feedcry/AzureODM-py/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/Feedcry/AzureODM-py/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/Feedcry/AzureODM-py">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -85,6 +85,8 @@
 
 <h2>
 <a name="api-document" class="anchor" href="#api-document"><span class="octicon octicon-link"></span></a>API Document</h2>
+
+<p><a href="http://feedcry.github.io/AzureODM-py/docs">http://feedcry.github.io/AzureODM-py/docs</a></p>
 
 <h2>
 <a name="authors" class="anchor" href="#authors"><span class="octicon octicon-link"></span></a>Authors</h2>
